Fri Jan 15 07:03:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryFilter/Base/QueryFilter_Test_Base.mpc:
        * connectors/dds4ccm/tests/QueryFilter/Connector/QueryFilter_Test_Connector.mpc:
        * connectors/dds4ccm/tests/QueryFilter/Receiver/QueryFilter_Test_Receiver.mpc:
        * connectors/dds4ccm/tests/QueryFilter/Sender/QueryFilter_Test_Sender.mpc:
        * connectors/dds4ccm/tests/QueryFilter/descriptors/Plan.cdp:
          Changed project names due to fuzz warnings.

Thu Jan 14 19:13:52 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
          Changed variable name.

Thu Jan 14 15:54:10 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
          Created a parameter list of variable size.

        * connectors/dds4ccm/tests/QueryFilter/Receiver/QueryFilter_Test_Receiver_exec.cpp:
          Extended test a bit more.

Thu Jan 14 15:33:59 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DDS_Base_Connector_T.cpp:
          Reverted DDS logging change.

Thu Jan 14 14:53:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryFilter/*:
        * bin/ciao_tests.lst:
          Added test to test the QueryFilter on the DataReader.

        * connectors/dds4ccm/impl/ndds/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
        * connectors/dds4ccm/impl/ndds/Reader_T.h:
        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
          Create a ContentFilteredTopic on a domainparticipant.
