@@ -295,6 +295,13 @@ namespace CIAO
     }
 
     int
+    idl3_to_xmi_visitor::visit_param_holder(
+      AST_Param_Holder *)
+    {
+      return 0;
+    }
+
+    int
     idl3_to_xmi_visitor::visit_interface (AST_Interface *node)
     {
       XMI_TRACE ("interface");
